<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Pantalla"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Selected_Sheet"
        android:textSize="28dp"
        android:translationX="400dp"
        android:translationY="100dp" />

    <ImageButton
        android:id="@+id/Iniciar_Test"
        android:layout_width="72dp"
        android:layout_height="75dp"
        android:background="@android:drawable/list_selector_background"
        android:translationX="1050dp"
        android:translationY="50dp"
        app:srcCompat="@drawable/ic_launcher_round"
        />


    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="100dp"
        android:layout_height="75dp"
        android:translationX="100dp"
        android:translationY="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.009"
        app:srcCompat="@drawable/png31" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Sheet_AE"
        android:textSize="28dp"
        android:translationX="200dp"
        android:translationY="175dp"
        />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="100dp"
        android:layout_height="75dp"
        app:srcCompat="@drawable/png32"
        android:translationX="100dp"
        android:translationY="250dp"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Sheet_FJ"
        android:textSize="28dp"
        android:translationX="200dp"
        android:translationY="275dp"

         />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="100dp"
        android:layout_height="75dp"
        app:srcCompat="@drawable/png33"
        android:translationX="100dp"
        android:translationY="350dp"
        />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="372dp"
        android:layout_height="47dp"
        android:text="@string/Sheet_KO"
        android:textSize="28dp"
        android:translationX="200dp"
        android:translationY="375dp"
         />


    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="100dp"
        android:layout_height="75dp"
        app:srcCompat="@drawable/png34"
        android:translationX="100dp"
        android:translationY="450dp"
        />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="415dp"
        android:layout_height="54dp"
        android:text="@string/Sheet_PT"
        android:textSize="28dp"
        android:translationX="200dp"
        android:translationY="475dp"
         />

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="100dp"
        android:layout_height="75dp"
        app:srcCompat="@drawable/png35"
        android:translationX="650dp"
        android:translationY="150dp"
       />


    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Sheet_UZ"
        android:textSize="28dp"
        android:translationX="750dp"
        android:translationY="175dp"
         />



    <ImageButton
        android:id="@+id/imageButton6"
        android:layout_width="100dp"
        android:layout_height="75dp"
        android:translationX="650dp"
        android:translationY="250dp"
        app:srcCompat="@drawable/png36"
        />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Sheet_stressed_vowels"
        android:textSize="28dp"
        android:translationX="750dp"
        android:translationY="275dp"
       />

    <ImageButton
        android:id="@+id/imageButton7"
        android:layout_width="100dp"
        android:layout_height="75dp"
        app:srcCompat="@drawable/png37"
        android:translationX="650dp"
        android:translationY="350dp"
        />
    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Sheet_Punctuation_Symbol"
        android:textSize="28dp"
        android:translationX="750dp"
        android:translationY="375dp"

        />
    <!--
        <ImageButton
            android:id="@+id/imageButton8"
            android:layout_width="100dp"
            android:layout_height="75dp"
            app:srcCompat="@drawable/png38"
            android:translationX="650dp"
            android:translationY="350dp"
            />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Sheet_04"
            android:textSize="28dp"
            android:translationX="750dp"
            android:translationY="375dp"
            />


        <ImageButton
            android:id="@+id/imageButton9"
            android:layout_width="100dp"
            android:layout_height="75dp"
            app:srcCompat="@drawable/png39"
            android:translationX="650dp"
            android:translationY="450dp"
            />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="415dp"
            android:layout_height="54dp"
            android:text="@string/Sheet_59"
            android:textSize="28dp"
            android:translationX="750dp"
            android:translationY="475dp"
            />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="963dp"
            tools:layout_editor_absoluteY="62dp" />

            -->






</androidx.constraintlayout.widget.ConstraintLayout>