<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Sheet_04">

    <ImageButton
        android:id="@+id/backscreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/Symbol_A"
        android:translationX="10dp"
        android:translationY="10dp"
        app:srcCompat="@android:drawable/ic_media_previous"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="10dp" />

    // Línea de entrenamiento


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TEST FOR LEARNING SYMBOLS"
        android:textSize="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        />


    // Línea de entrenamiento

    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/Symbol_0"
        android:translationX="220dp"
        android:translationY="65dp"
        app:srcCompat="@drawable/png30"
        />


    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/Symbol_1"
        android:translationX="400dp"
        android:translationY="65dp"
        app:srcCompat="@drawable/png31"
        />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/Symbol_2"
        android:translationX="600dp"
        android:translationY="65dp"
        app:srcCompat="@drawable/png32"
        />


    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="false"
        android:contentDescription="@string/Symbol_3"
        android:translationX="780dp"
        android:translationY="65dp"
        app:srcCompat="@drawable/png33"
        />


    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/Symbol_4"
        android:translationX="980dp"
        android:translationY="65dp"
        app:layout_constrainedHeight="true"
        app:layout_constrainedWidth="true"
        app:srcCompat="@drawable/png34"
        />

    <ImageButton
        android:id="@+id/imageButton40"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@android:drawable/presence_online"
        android:translationX="180dp"
        android:translationY="90dp"
        />

    <ImageButton
        android:id="@+id/imageButton41"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@android:drawable/presence_online"
        android:translationX="1110dp"
        android:translationY="90dp"
        />
    // Columna de Respuestas

    <ImageButton
        android:id="@+id/imageButton61"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:translationX="1150dp"
        android:translationY="100dp"
        app:srcCompat="@drawable/png30"
        />


    <ImageButton
        android:id="@+id/imageButton62"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:translationX="1150dp"
        android:translationY="200dp"
        app:srcCompat="@drawable/png31"
        />

    <ImageButton
        android:id="@+id/imageButton63"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:translationX="1150dp"
        android:translationY="300dp"
        app:srcCompat="@drawable/png32"
        />



    <ImageButton
        android:id="@+id/imageButton64"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="false"
        android:translationX="1150dp"
        android:translationY="400dp"
        app:srcCompat="@drawable/png33"
        />


    <ImageButton
        android:id="@+id/imageButton65"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:translationX="1150dp"
        android:translationY="500dp"
        app:layout_constrainedHeight="true"
        app:layout_constrainedWidth="true"
        app:srcCompat="@drawable/png34"/>

    // 1º Intento


    <ImageButton
        android:id="@+id/imageButton6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/Symbol_0"
        android:translationX="220dp"
        android:translationY="232dp"
        app:srcCompat="@drawable/png30"
        />

    <ImageButton
        android:id="@+id/imageButton7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/Symbol_4"
        android:translationX="400dp"
        android:translationY="232dp"
        app:srcCompat="@drawable/png34"
        />

    <ImageButton
        android:id="@+id/imageButton8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/Symbol_2"
        app:srcCompat="@drawable/png32"
        android:translationX="600dp"
        android:translationY="232dp"/>

    <ImageButton
        android:id="@+id/imageButton9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/Symbol_3"
        app:srcCompat="@drawable/png33"
        android:translationX="780dp"
        android:translationY="232dp"/>

    <ImageButton
        android:id="@+id/imageButton10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/Symbol_1"
        app:srcCompat="@drawable/png31"
        android:translationX="980dp"
        android:translationY="232dp"/>

    <ImageButton
        android:id="@+id/imageButton42"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@android:drawable/presence_online"
        android:translationX="180dp"
        android:translationY="242dp"
        />

    <ImageButton
        android:id="@+id/imageButton43"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@android:drawable/presence_online"
        android:translationX="1110dp"
        android:translationY="242dp"
        />

    // 2º Intento

    <ImageButton
        android:id="@+id/imageButton11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/png34"
        android:translationX="220dp"
        android:translationY="325dp"/>
    />
    <ImageButton
        android:id="@+id/imageButton12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/png31"
        android:translationX="400dp"
        android:translationY="325dp"/>

    <ImageButton
        android:id="@+id/imageButton13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/png32"
        android:translationX="600dp"
        android:translationY="327dp"/>

    <ImageButton
        android:id="@+id/imageButton14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/png33"
        android:translationX="780dp"
        android:translationY="325dp"
        />

    <ImageButton
        android:id="@+id/imageButton15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/png30"
        android:translationX="980dp"
        android:translationY="325dp"/>

    <ImageButton
        android:id="@+id/imageButton45"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@android:drawable/presence_online"
        android:translationX="180dp"
        android:translationY="340dp"
        />
    <ImageButton
        android:id="@+id/imageButton46"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@android:drawable/presence_online"
        android:translationX="1110dp"
        android:translationY="340dp"
        />

    // 3º intento
    <ImageButton
        android:id="@+id/imageButton16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/png33"
        android:translationX="220dp"
        android:translationY="415dp"
        />

    <ImageButton
        android:id="@+id/imageButton17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/png31"
        android:translationX="400dp"
        android:translationY="415dp"
        />

    <ImageButton
        android:id="@+id/imageButton18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:translationX="600dp"
        android:translationY="415dp"
        app:srcCompat="@drawable/png34"
        />

    <ImageButton
        android:id="@+id/imageButton19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:translationX="780dp"
        android:translationY="415dp"
        app:srcCompat="@drawable/png30"
        />

    <ImageButton
        android:id="@+id/imageButton20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:translationX="980dp"
        android:translationY="415dp"
        app:srcCompat="@drawable/png32"
        />

    <ImageButton
        android:id="@+id/imageButton47"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@android:drawable/presence_online"
        android:translationX="180dp"
        android:translationY="430dp"
        />
    <ImageButton
        android:id="@+id/imageButton48"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@android:drawable/presence_online"
        android:translationX="1110dp"
        android:translationY="430dp"
        />

    // 4º Intento

    <ImageButton
        android:id="@+id/imageButton21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:translationX="220dp"
        android:translationY="500dp"
        app:srcCompat="@drawable/png32"
        />

    <ImageButton
        android:id="@+id/imageButton22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/png33"
        android:translationX="400dp"
        android:translationY="500dp"
        />

    <ImageButton
        android:id="@+id/imageButton23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:translationX="600dp"
        android:translationY="500dp"
        app:srcCompat="@drawable/png30"
        />

    <ImageButton
        android:id="@+id/imageButton24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:translationX="780dp"
        android:translationY="500dp"
        app:srcCompat="@drawable/png31"
        />

    <ImageButton
        android:id="@+id/imageButton25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:translationX="980dp"
        android:translationY="500dp"
        app:srcCompat="@drawable/png34"
        />

    <ImageButton
        android:id="@+id/imageButton49"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@android:drawable/presence_online"
        android:translationX="180dp"
        android:translationY="520dp"
        />
    <ImageButton
        android:id="@+id/imageButton50"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@android:drawable/presence_online"
        android:translationX="1110dp"
        android:translationY="520dp"
        />


    // Iniciar la prueba

    <ImageButton
        android:id="@+id/Start_test"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:background="@android:drawable/list_selector_background"
        android:translationX="50dp"
        android:translationY="100dp"
        app:srcCompat="@android:drawable/ic_lock_power_off"
        />

    <ImageButton
        android:id="@+id/Stop_test"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:background="@android:drawable/list_selector_background"
        android:translationX="125dp"
        android:translationY="100dp"
        app:srcCompat="@android:drawable/ic_notification_overlay"
        />
    <TextView
        android:id="@+id/textView12"
        style="@android:style/Widget.DeviceDefault.Light.TextView"
        android:layout_width="569dp"
        android:layout_height="33dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/Active_line"
        android:textIsSelectable="false"
        android:textSize="24sp"
        android:textStyle="bold"
        android:translationX="270dp"
        android:translationY="151dp"
        android:typeface="serif"
        />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="139dp"
        android:layout_height="107dp"
        android:text="0"
        android:textSize="36dp"
        android:textStyle="bold"
        android:translationX="930dp"
        android:translationY="150dp"
        />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="139dp"
        android:layout_height="107dp"
        android:text="Segs"
        android:textSize="36dp"
        android:textStyle="bold"
        android:translationX="1000dp"
        android:translationY="150dp"
        />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="230dp"
        android:layout_height="89dp"
        android:text="Cronómetro:"
        android:textSize="36dp"
        android:textStyle="bold"
        android:translationX="700dp"
        android:translationY="150dp"
        />


    <RadioGroup
        android:id="@+id/Test_Type"
        android:layout_width="157dp"
        android:layout_height="200dp"
        android:translationX="10dp"
        android:translationY="310dp"
        >

        <RadioButton
            android:id="@+id/Test_Control"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Test_Control" />

        <RadioButton
            android:id="@+id/Test_V_Onom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Test_Experimen_Onom" />

        <RadioButton
            android:id="@+id/Test_V_Number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Test Vibrate Patterns - Number" />
    </RadioGroup>


    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Id. Prueba"
        android:textSize="20dp"
        android:translationX="25dp"
        android:translationY="490dp" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="151dp"
        android:layout_height="57dp"
        android:ems="10"
        android:textSize="20dp"
        android:inputType="textPersonName"
        android:text="Prueba_"
        android:translationX="25dp"
        android:translationY="530dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="70dp"
        android:layout_height="50dp"
        app:srcCompat="@android:drawable/ic_media_play"
        android:translationX="125dp"
        android:translationY="480dp" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="20dp"
        android:translationX="50dp"
        android:translationY="530dp" />


</androidx.constraintlayout.widget.ConstraintLayout>